--- a/src/Restoran/appsettings.json
+++ b/src/Restoran/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Restoran-60DA55A1-5F23-4FB0-86B8-5F5C62F3D9A4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Restoran-60DA55A1-5F23-4FB0-86B8-5F5C62F3D9A4;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=;database=restoran;CharSet=utf8"
   },
   "Logging": {
     "LogLevel": {
